update the mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   border:3px solid gray;
+  width: 100%;
+  height:100%;
+
 }
 
 #backgroundImage, #playerImage, #worm, #ghost, #spider {
