--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   border:3px solid gray;
-  width: 100%;
-  height:100%;
+  max-width: 100%;
+  max-height:100%;
 
 }
 
